New branch develop

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,14 @@ body {
     color: red;
 }
 
+.dropdown {
+
+}
+
+.dropdown-content {
+
+}
+
 #sidebar {
     position: fixed;
     display: flex;
