--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,9 @@ body {
 }
 
 .nav {
+    font-weight: 600;
+    font-size: 1.125em;
+    letter-spacing: .2em;
     display: flex;
     justify-content: flex-end;
     list-style: none;
@@ -35,12 +38,48 @@ body {
     color: red;
 }
 
-.dropdown {
-
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
-.dropdown-content {
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
 
+/*
+li.dropdown {
+    display: inline-block;
+}
+
+*/
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 200px;
+    box-shadow: 0 20px 32px rgba(63,101,97,0.3);
+    /*z-index: 1;*/
+    border: 1px solid #91a198;
+}
+
+.dropdown-content a {
+    color: black;
+    /*padding: 12px 16px;*/
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 #sidebar {
@@ -131,6 +170,23 @@ body {
 
 #contact {
     min-height: 100vh;
+}
+
+.form {
+    display: flex;
+    justify-content: center;
+}
+
+#contact h2 {
+    font-size: 3.875em;
+    text-transform: uppercase;
+}
+
+#name, #email, #message {
+    border: 1px solid #91a198;
+    box-shadow: 0 20px 32px rgba(63,101,97,0.3);
+    padding: 14px 16px;
+    margin-bottom: 1em;
 }
 
 #footer {
