--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,33 @@ li.dropdown {
     display: block;
 }
 
+.burger-menu {
+    display: none;
+}
+
+@media screen and (max-width: 820px){
+
+    .nav {
+        display: none;
+        flex-direction: column;
+        width: 100vw;
+        background-color: white;
+    }
+
+    .nav.show {
+        display: flex;
+    }
+
+    .burger-menu {
+        display: inline-block;
+        cursor: pointer;
+        font-size: 2em;
+        position: fixed;
+        z-index: 1;
+        margin: 0 0 0 .2rem;
+    }
+}
+
 #sidebar {
     display: block;
     position: fixed;
@@ -226,6 +253,53 @@ li.dropdown {
     max-width: 520px;
 }
 
+.image-comparaison {
+    max-width: 600px;
+}
+
+.image-comparaison img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: left;
+}
+
+.image-comparaison .image-container {
+    position: relative;
+    display: flex;
+}
+
+.image-comparaison .image-container .before {
+    position: absolute;
+    top: 0;
+    width: 50%;
+}
+
+.image-comparaison .slider {
+    position: absolute;
+    width: 100%;
+    top: 45%;
+    opacity: 0;
+}
+
+.image-comparaison .slider-line {
+    position: absolute;
+    height: 100%;
+    width: 3px;
+    background: #fff;
+    left: 50%;
+}
+
+.image-comparaison .slider-icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 60px;
+    height: 60px;
+    color: #fff;
+    transform: translate(-50%, -50%) rotateZ(90deg);
+}
+
 #skills {
     min-height: 100vh;
 }
@@ -273,6 +347,10 @@ li.dropdown {
     top: 5em;
     font-size: 2em;
     text-shadow: 0 2px 24px rgba(0,0,0,.6);
+}
+
+.projects-title img {
+    width: 100%;
 }
 
 .btn1 {
@@ -385,6 +463,21 @@ li.dropdown {
 
 #hobbies {
     min-height: 100vh;
+}
+
+.hobbies {
+    position: relative;
+    top: 20vh;
+    left: 20%;
+}
+
+.hobbies ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.nav-hobbies {
+
 }
 
 #exp {
@@ -501,7 +594,20 @@ li.dropdown {
 
 .form {
     display: flex;
+    flex-direction: row;
     justify-content: center;
+}
+
+.form form {
+    margin-left: 2.5em;
+}
+
+.form h2 {
+    margin: 0;
+}
+
+textarea {
+    width: 200px;
 }
 
 #contact h2 {
@@ -533,8 +639,42 @@ li.dropdown {
     font-size: 1.125em;
     font-weight: 600;
     text-transform: uppercase;
-    margin-left: 2em;
+    margin: 2.5em 0 0 2em;
     letter-spacing: .2em;
+}
+
+.socials {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 2.5rem;
+}
+
+.socials a {
+    margin-left: 2.5rem;
+}
+
+.copyright {
+    text-align: center;
+    color: white;
+    margin-top: 2.5em;
+}
+
+.line {
+    margin: 2.5em auto 0;
+    border-bottom: 1px solid #2c2c2c;
+    width: 70%;
+}
+
+.logos-top, .logos-bottom {
+    display: flex;
+    align-items: center;flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2.5em;
+}
+
+.logos-bottom a {
+    margin-left: 20px;
 }
 
 /*
