--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,23 @@
 body {
     font-family: "ff-good-web-pro-condensed", sans-serif;
     margin: 0;
+    overflow-x: hidden;
+}
+
+#home, #about, #skills, #projects, #news, #hobbies, #exp, #comment, #comment {
+    min-height: 100vh;
+}
+
+#home::after, #about::after, #skills::after, #news::after {
+    content: "";
+    top: 8px;
+    right: 8px;
+    bottom: 8px;
+    left: 8px;
+    position: absolute;
+    opacity: .1;
+    border: 1px solid #000;
+    z-index: 1;
 }
 
 .hidden {
@@ -12,67 +29,60 @@ body {
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 1;
+    z-index: 3;
 }
 
 .nav {
-    font-weight: 600;
-    font-size: 1.125em;
-    letter-spacing: .2em;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    font-weight: 600;
+    font-size: 1.125rem;
+    letter-spacing: .2rem;
     list-style: none;
     text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    min-height: 5.5rem;
 }
 
 .nav li {
-    margin: 0 20px 0 20px;
+    margin: 0 .5rem 0 .5rem;
 }
 
 .nav li a {
-    color: black;
+    color: #000;
     text-decoration: none;
+}
+
+.nav a[href="#contact"] {
+    color: red;
 }
 
 .nav li a:hover {
     color: red;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
 li a, .dropbtn {
     display: inline-block;
-    color: white;
+    color: #fff;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0.875rem 1rem;
     text-decoration: none;
 }
-
-/*
-li.dropdown {
-    display: inline-block;
-}
-
-*/
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: white;
-    min-width: 200px;
-    box-shadow: 0 20px 32px rgba(63,101,97,0.3);
-    /*z-index: 1;*/
+    background-color: #fff;
+    min-width: 12.5rem;
+    box-shadow: 0 20px 32px rgba(63, 101, 97, 0.3);
     border: 1px solid #91a198;
 }
 
 .dropdown-content a {
-    color: black;
-    /*padding: 12px 16px;*/
+    color: #000;
     text-decoration: none;
     display: block;
     text-align: left;
@@ -86,7 +96,7 @@ li.dropdown {
     display: none;
 }
 
-@media screen and (max-width: 820px){
+@media screen and (max-width: 1024px) {
 
     .nav {
         display: none;
@@ -102,10 +112,10 @@ li.dropdown {
     .burger-menu {
         display: inline-block;
         cursor: pointer;
-        font-size: 2em;
+        font-size: 2rem;
         position: fixed;
-        z-index: 1;
-        margin: 0 0 0 .2rem;
+        z-index: 3;
+        margin: .5rem 0 0 1rem;
     }
 }
 
@@ -117,12 +127,12 @@ li.dropdown {
     flex-direction: column;
     align-items: flex-end;
     */
-    right: 0;
+    right: 20px;
     top: 30%;
-    z-index: 1;
-    background-color: rgba(0,0,0,.2);
+    z-index: 3;
+    background-color: rgba(0, 0, 0, .2);
     height: 50%;
-    width: 50px;
+    width: 5%;
 }
 
 #sidebar a {
@@ -139,8 +149,8 @@ li.dropdown {
     position: fixed;
     right: 0;
     top: 30%;
-    z-index: 1;
-    background-color: rgba(0,0,0,.2);
+    z-index: 3;
+    background-color: rgba(0, 0, 0, .2);
     height: 50%;
 }
 
@@ -149,55 +159,57 @@ li.dropdown {
 }
 
 #home {
-    min-height: 100vh;
-    background-image: url("/img/bckg1.jpg");
+    background-image: url("/img/home1.jpg");
     background-size: cover;
+    position: relative;
+}
+
+@media screen and (max-width: 1920px) {
+    #home {
+        background-image: url("/img/home2.jpg");
+        background-size: cover;
+    }
 }
 
 .wrapper-home {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2em;
     position: absolute;
-    top: 30%;
+    top: 20%;
     right: 20%;
-    font-size: 1.125em;
-    color: white;
+    font-size: 1.125rem;
+    color: #fff;
     min-width: 50%;
     margin-left: 40%;
-
-    /*padding-top: 20%;*/
+    text-align: center;
 }
 
-.description {
-    font-size: 2em;
+.description, .job {
+    font-size: 2.75rem;
     font-weight: 700;
-    text-align: center;
-    filter: drop-shadow(0 1px 4px rgba(0,0,0,.85)) drop-shadow(0 6px 28px rgba(0,0,0,.7));
+    filter: drop-shadow(0 1px 4px rgba(0, 0, 0, .85)) drop-shadow(0 6px 28px rgba(0, 0, 0, .7));
 }
 
 .trapezoid {
-        width: 220px;
-        text-align: center;
-        height: 0;
-        position: relative;
-        border-right: 50px solid transparent;
-        border-top: 40px solid #fff;
-        border-left: 50px solid transparent;
-        box-sizing: content-box;
-        /*box-shadow: inset 0 0 10px #000;*/
-        /*box-shadow: 0 20px 32px rgba(63, 101, 97,.5);*/
+    width: 220px;
+    text-align: center;
+    height: 0;
+    position: relative;
+    border-right: 20px solid transparent;
+    border-top: 40px solid #fff;
+    border-left: 20px solid transparent;
 }
 
 .trapezoid a {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: 700;
     text-transform: uppercase;
     position: absolute;
     top: -33px;
-    left: 15%;
+    left: 17%;
     color: red;
+    text-decoration: none;
 }
 
 .trapezoid a[href="#contact"] {
@@ -208,53 +220,51 @@ li.dropdown {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    gap: 2em 1em;
+    gap: 2rem 1rem;
 }
-
-/*
-
-.wrapper h2 {
-    margin-top: 0;
-}
-
-*/
-
-#home a {
-    text-decoration: none;
-}
-
-/*
-
-#home a:first-of-type {
-    color: red;
-}
-
-*/
-
-/*
-
-#home a:last-of-type {
-    color: white;
-}
-
-*/
 
 #about {
-    min-height: 100vh;
+    background-image: url("/img/gradient1.jpg");
+    background-size: cover;
+    position: relative;
+}
+
+@media screen and (max-width: 1920px) {
+    #about {
+        background-image: url("/img/gradient2.jpg");
+        background-size: cover;
+    }
 }
 
 .wrapper-about {
     display: flex;
-    padding-top: 10vh;
-    margin: 0 10em 0 10em;
+    gap: 2.5rem;
+    padding-top: 30vh;
+    margin: 0 0 0 15rem;
 }
 
 .content-about {
-    max-width: 520px;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    z-index: 2;
+}
+
+.content-about h3 {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.content-about a {
+    color: #000;
+    text-decoration: none;
+}
+
+.content-about a:hover {
+    text-decoration: underline;
 }
 
 .image-comparaison {
-    max-width: 600px;
+    max-width: 700px;
 }
 
 .image-comparaison img {
@@ -280,6 +290,7 @@ li.dropdown {
     width: 100%;
     top: 45%;
     opacity: 0;
+    z-index: 5;
 }
 
 .image-comparaison .slider-line {
@@ -301,18 +312,66 @@ li.dropdown {
 }
 
 #skills {
-    min-height: 100vh;
+    background-image: url("/img/gradient1.jpg");
+    background-size: cover;
+    position: relative;
+}
+
+@media screen and (max-width: 1920px){
+    #skills {
+        background-image: url("/img/gradient2.jpg");
+        background-size: cover;
+    }
 }
 
 .wrapper-skills {
     display: flex;
     position: relative;
+    gap: 2rem;
     top: 30vh;
     margin-left: 8.75em;
 }
 
+.content-skills h2 {
+    font-size: 2rem;
+}
+
+.content-skills {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+}
+
+.content-skills img {
+    align-self: center;
+    margin: 1.75rem 0 1.75rem 0;
+    max-width: 100%;
+}
+
+.slider-image {
+    overflow-x: auto;
+    z-index: 2;
+}
+
+.slider-wrapper {
+    display: flex;
+    gap: 2rem;
+    width: 100%;
+    filter: drop-shadow(0 8px 24px rgba(0,0,0,.2));
+}
+
+/*
+
+.left, .right {
+    position: absolute;
+    top: 110%;
+    left: 60%;
+}
+
+*/
+
 #projects {
-    min-height: 100vh;
     background-image: url("/img/bckg2.jpg");
     background-size: cover;
     position: relative;
@@ -325,9 +384,10 @@ li.dropdown {
     left: 8.75em;
 }
 
-.projects span{
+.projects span {
     color: white;
 }
+
 .projects h2 {
     color: white;
     font-size: 3.5em;
@@ -335,18 +395,18 @@ li.dropdown {
 
 .projects-title {
     display: grid;
-    grid-template: repeat(2,1fr) /repeat(2, 1fr);
+    grid-template: repeat(2, 1fr) /repeat(2, 1fr);
     gap: 2.5em;
 }
 
-.title h3{
+.title h3 {
     position: relative;
     text-align: center;
     color: red;
     margin: 0;
     top: 5em;
     font-size: 2em;
-    text-shadow: 0 2px 24px rgba(0,0,0,.6);
+    text-shadow: 0 2px 24px rgba(0, 0, 0, .6);
 }
 
 .projects-title img {
@@ -369,12 +429,12 @@ li.dropdown {
     /*padding: 10%;*/
     /*color: #000;*/
     /*transform: translate(-50%, -50%);*/
-    background-color: rgba(0,0,0,1);
+    background-color: rgba(0, 0, 0, 1);
     visibility: hidden;
     /*opacity: 0;*/
     /*transition: opacity .5s, visibility 0s linear .5s;*/
     z-index: 1;
-    background-image: url("/img/bckg1.jpg");
+    background-image: url("/img/home1.jpg");
     background-size: cover;
 }
 
@@ -382,7 +442,7 @@ li.dropdown {
     display: flex;
     flex-direction: column;
     min-width: 37.5em;
-    background: rgba(0,0,0,.7);
+    background: rgba(0, 0, 0, .7);
     color: white;
     position: absolute;
     left: 6.25em;
@@ -407,7 +467,16 @@ li.dropdown {
 }
 
 #news {
-    min-height: 100vh;
+    background-image: url("/img/gradient1.jpg");
+    background-size: cover;
+    position: relative;
+}
+
+@media screen and (max-width: 1920px){
+    #project {
+        background-image: url("/img/gradient2.jpg");
+        background-size: cover;
+    }
 }
 
 .news {
@@ -415,39 +484,45 @@ li.dropdown {
     justify-content: center;
     position: relative;
     top: 20vh;
-    gap: 2.5em;
+    gap: 2.5rem;
 }
+
 #news h2 {
+    position: relative;
+    top: 20vh;
     text-align: center;
-    font-size: 3.5em;
-    margin: 0;
+    font-size: 2rem;
 }
 
 .news-content {
-    background: rgba(0,0,0,.05);
-    padding: 2em;
+    background: rgba(0, 0, 0, .05);
+    padding: 2rem;
+    z-index: 2;
+}
+
+.news-content li {
     list-style-type: square;
 }
 
-.news-content a:hover {
+.news-content a:hover, .news article a:hover {
     color: red;
 }
 
 .news-content a {
-    color: black;
-    font-size: 1.25em;
+    color: #000;
+    font-size: 1.25rem;
 }
 
 .news article a {
     text-decoration: none;
-    font-size: 2em;
-    color: black;
+    font-size: 2.25rem;
+    color: #000;
     font-weight: 700;
 }
 
 .news article a img {
-    filter: drop-shadow(0 8px 24px rgba(0,0,0,.2));
-    box-shadow: 0 8px 24px rgba(0,0,0,.2);
+    filter: drop-shadow(0 8px 24px rgba(0, 0, 0, .2));
+    box-shadow: 0 8px 24px rgba(0, 0, 0, .2);
     margin-bottom: 1rem;
     width: 100%;
 }
@@ -457,12 +532,12 @@ li.dropdown {
     max-width: 520px;
 }
 
-.news article a:hover {
-    color: red;
+article {
+    z-index: 2;
 }
 
 #hobbies {
-    min-height: 100vh;
+
 }
 
 .hobbies {
@@ -481,7 +556,7 @@ li.dropdown {
 }
 
 #exp {
-    min-height: 100vh;
+
 }
 
 #exp h2 {
@@ -557,7 +632,7 @@ li.dropdown {
 }
 
 #comment {
-    min-height: 100vh;
+
 }
 
 .wrapper-comment {
@@ -573,14 +648,14 @@ li.dropdown {
 }
 
 .comment-image {
-    filter: drop-shadow(0 2px 5px rgba(0,0,0,.24)) drop-shadow(0 8px 32px rgba(0,0,0,.3));
+    filter: drop-shadow(0 2px 5px rgba(0, 0, 0, .24)) drop-shadow(0 8px 32px rgba(0, 0, 0, .3));
 }
 
 .comment-title {
 
 }
 
-.comment-title h2{
+.comment-title h2 {
     font-size: 3.5em;
 }
 
@@ -589,7 +664,8 @@ li.dropdown {
 }
 
 #contact {
-    min-height: 100vh;
+
+    background-color: yellow;
 }
 
 .form {
@@ -617,14 +693,17 @@ textarea {
 
 #name, #email, #message {
     border: 1px solid #91a198;
-    box-shadow: 0 20px 32px rgba(63,101,97,0.3);
+    box-shadow: 0 20px 32px rgba(63, 101, 97, 0.3);
     padding: 14px 16px;
     margin-bottom: 1em;
 }
 
+/* Footer OK */
+
 #footer {
-    background-color: black;
-    min-height: 100vh;
+    background-color: #000;
+    min-height: 80vh;
+    text-align: center;
 }
 
 .links-top, .links-bottom {
@@ -634,19 +713,19 @@ textarea {
 }
 
 .links-top a, .links-bottom a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.125em;
+    color: #fff;
+    font-size: 1.125rem;
     font-weight: 600;
-    text-transform: uppercase;
-    margin: 2.5em 0 0 2em;
     letter-spacing: .2em;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin: 2.5rem 0 0 2rem;
 }
 
 .socials {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    justify-content: center;
     margin-top: 2.5rem;
 }
 
@@ -655,44 +734,30 @@ textarea {
 }
 
 .copyright {
-    text-align: center;
-    color: white;
-    margin-top: 2.5em;
+    font-size: 1.125rem;
+    color: hsla(0,0%,100%,.6);
+    margin-top: 2.5rem;
 }
 
 .line {
-    margin: 2.5em auto 0;
+    margin: 2.5rem auto 0;
     border-bottom: 1px solid #2c2c2c;
     width: 70%;
 }
 
 .logos-top, .logos-bottom {
     display: flex;
-    align-items: center;flex-wrap: wrap;
+    flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
-    margin-top: 2.5em;
+    margin-top: 2.5rem;
+    gap: 2rem;
 }
 
-.logos-bottom a {
-    margin-left: 20px;
+.st2 {
+    fill: #001E36;
 }
 
-/*
-
-.links-bottom {
-    display: flex;
-    justify-content: center;
-    margin-top: 2.5em;
+.st3 {
+    fill: #31A8FF;
 }
-
-.links-bottom a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.125em;
-    font-weight: 600;
-    text-transform: uppercase;
-    margin-left: 2em;
-    letter-spacing: .2em;
-}
-
-*/
