--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     min-height: 100vh;
 }
 
-#home::after, #about::after, #skills::after, #news::after {
+#home::after, #about::after, #skills::after, #news::after, #exp::after {
     content: "";
     top: 8px;
     right: 8px;
@@ -556,27 +556,33 @@ article {
 }
 
 #exp {
-
+    position: relative;
+    background-image: url("/img/mac3.png");
+    background-position: 50% 20%;
+    background-repeat: no-repeat;
 }
 
 #exp h2 {
-    font-size: 2rem;
+    font-size: 3.5rem;
     margin: 0 8.75rem;
-    padding-top: 8.75rem;
+    padding-top: 20vh;
+    min-width: 18.75rem;
 }
 
 .exp-links {
     margin: 1.125rem 8.75rem;
+    min-width: 18.75rem;
 }
 
 .exp-links a {
-    color: black;
+    color: #000;
     text-decoration: none;
     font-size: 1.125rem;
     font-weight: 600;
     letter-spacing: .125rem;
     text-transform: uppercase;
     position: relative;
+    z-index: 2;
 }
 
 .exp-links a:hover {
@@ -588,7 +594,7 @@ article {
     display: block;
     height: 2px;
     width: 100%;
-    background: black;
+    background: #000;
     position: absolute;
     bottom: -4px;
 }
@@ -598,37 +604,60 @@ article {
 }
 
 .timeline {
+    position: relative;
     display: flex;
-    padding: 0 8.75em;
     align-items: flex-end;
+    margin-top: 10vh;
+    padding: 0 8.75em;
+    overflow-x: auto;
+    z-index: 2;
 }
 
 .timeline a {
-    color: black;
+    color: #000;
 }
 
 .timeline p {
     text-align: left;
 }
 
+.exp-content {
+    flex-shrink: 0;
+    width: 390px; /*24.375rem*/
+}
+
+.exp-content p {
+    width: 90%;
+}
+
 .status {
     padding: 0 40px;
     display: flex;
     justify-content: center;
-    border-top: 4px solid black;
+    border-top: 4px solid #000;
     position: relative;
 }
 
 .status:before {
-    background-color: white;
+    background-color: #fff;
     content: "";
     width: 5px;
     height: 5px;
     transform: rotate(45deg);
-    border: 4px solid black;
+    border: 4px solid #000;
     position: absolute;
     top: -8px;
     left: 0;
+}
+
+.bold {
+    font-size: 1.125rem;
+    font-weight: 700;
+    line-height: 1.5rem;
+}
+
+.text {
+    line-height: 1.5rem;
 }
 
 #comment {
