--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,21 @@
 body {
     font-family: "ff-good-web-pro-condensed", sans-serif;
     margin: 0;
-    overflow-x: hidden;
 }
 
-#home, #about, #skills, #projects, #news, #hobbies, #exp, #comment, #comment {
+.scroll {
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+    position: relative;
+}
+
+#home, #about, #skills, #projects, #news, #hobbies, #exp, #comment, #comment, #contact, #footer {
     min-height: 100vh;
+    scroll-snap-align: center;
 }
 
-#home::after, #about::after, #skills::after, #news::after, #exp::after {
+#home::after, #about::after, #skills::after, #news::after, #exp::after, #comment::after {
     content: "";
     top: 8px;
     right: 8px;
@@ -453,11 +460,11 @@ li a, .dropbtn {
     text-decoration: none;
     position: absolute;
     right: .5em;
-    top: .3em;
+    top: 1rem;
     /*padding: 5px;*/
     color: #fff;
     /*transition: color .3s;*/
-    font-size: 4em;
+    font-size: 4rem;
     /*line-height: 1.5;*/
 }
 
@@ -564,13 +571,13 @@ article {
 
 #exp h2 {
     font-size: 3.5rem;
-    margin: 0 8.75rem;
+    margin: 0 8.75rem; /* 10% */
     padding-top: 20vh;
     min-width: 18.75rem;
 }
 
 .exp-links {
-    margin: 1.125rem 8.75rem;
+    margin: 1.125rem 8.75rem; /* 10% */
     min-width: 18.75rem;
 }
 
@@ -608,7 +615,7 @@ article {
     display: flex;
     align-items: flex-end;
     margin-top: 10vh;
-    padding: 0 8.75em;
+    padding: 0 8.75em; /* 10% */
     overflow-x: auto;
     z-index: 2;
 }
@@ -660,40 +667,102 @@ article {
     line-height: 1.5rem;
 }
 
-#comment {
+.popup-exp {
+    position: fixed;
+    transform: translateY(-50%) translateX(-50%);
+    top: 50%;
+    left: 50%;
+    min-width: 50%;
+    min-height: 50%;
+    background-color: #fff;
+    visibility: hidden;
+    z-index: 2;
+}
 
+.popup-exp:target {
+    visibility: visible;
+}
+
+.close-exp {
+    text-decoration: none;
+    position: absolute;
+    right: 2rem;
+    top: 1rem;
+    font-size: 4rem;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    display: none;
+    z-index: 1;
+}
+
+#comment {
+    position: relative;
 }
 
 .wrapper-comment {
     display: flex;
-    gap: 2.5em;
+    gap: 2.5rem;
     position: relative;
-    top: 20vh;
-    margin-left: 8.75em;
+    top: 25vh;
+    margin-left: 10%;
+    z-index: 2;
 }
 
 .wrapper-comment a {
-    margin-right: 40px;
+    position: relative;
+    margin-right: 2.5rem;
 }
 
-.comment-image {
+.wrapper-comment a::after {
+    content: "";
+    border: 1px solid hsla(0, 0%, 100%, .16);
+    position: absolute;
+    bottom: 8px;
+    left: 4px;
+    right: 4px;
+    top: 4px;
+}
+
+.comment-img {
+    display: flex;
     filter: drop-shadow(0 2px 5px rgba(0, 0, 0, .24)) drop-shadow(0 8px 32px rgba(0, 0, 0, .3));
+    overflow-x: auto;
 }
 
 .comment-title {
-
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    max-width: 450px;
 }
 
 .comment-title h2 {
-    font-size: 3.5em;
+    font-size: 3.5rem;
+    line-height: 3.5rem;
+    margin: 0;
 }
 
 .comment-title p {
-    font-size: 1.125em;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    margin: 0;
+}
+
+.comment-title p:first-of-type {
+    font-size: 1.5rem;
+    font-weight: 700;
 }
 
 #contact {
-
     background-color: yellow;
 }
 
@@ -731,7 +800,6 @@ textarea {
 
 #footer {
     background-color: #000;
-    min-height: 80vh;
     text-align: center;
 }
 
