--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     scroll-snap-align: center;
 }
 
-#home::after, #about::after, #skills::after, #news::after, #exp::after, #comment::after {
+#home::after, #about::after, #skills::after, #news::after, #exp::after, #comment::after, #contact::after {
     content: "";
     top: 8px;
     right: 8px;
@@ -168,6 +168,7 @@ li a, .dropbtn {
 #home {
     background-image: url("/img/home1.jpg");
     background-size: cover;
+    background-position: center;
     position: relative;
 }
 
@@ -190,6 +191,7 @@ li a, .dropbtn {
     min-width: 50%;
     margin-left: 40%;
     text-align: center;
+    z-index: 2;
 }
 
 .description, .job {
@@ -228,6 +230,7 @@ li a, .dropbtn {
     flex-wrap: wrap;
     align-items: center;
     gap: 2rem 1rem;
+    z-index: 2;
 }
 
 #about {
@@ -763,21 +766,49 @@ article {
 }
 
 #contact {
-    background-color: yellow;
+    position: relative;
+    background-image: url("/img/background.webp");
+    background-size: cover;
+}
+
+.form-content {
+    max-width: 35vw;
+}
+
+@media screen and (max-width: 1024px){
+    .background {
+        display: flex;
+        flex-direction: column;
+    }
+    #contact h2 {
+        min-width: 360px;
+    }
+}
+
+#form {
+    z-index: 2;
+    width: 50%;
 }
 
 .form {
+    padding: 10% 10% 5% 10%;
+}
+
+.background {
     display: flex;
-    flex-direction: row;
     justify-content: center;
+    box-sizing: border-box;
+    background: hsla(0,29%,71%,.05);
+    padding: 60px 20px;
 }
 
 .form form {
-    margin-left: 2.5em;
+    margin-left: 2.5rem;
 }
 
-.form h2 {
-    margin: 0;
+.title-form {
+    display: flex;
+    align-items: center;
 }
 
 textarea {
@@ -785,15 +816,47 @@ textarea {
 }
 
 #contact h2 {
-    font-size: 3.875em;
+    font-size: 3.875rem;
     text-transform: uppercase;
+    margin: 0;
 }
 
 #name, #email, #message {
     border: 1px solid #91a198;
     box-shadow: 0 20px 32px rgba(63, 101, 97, 0.3);
     padding: 14px 16px;
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
+    outline: none;
+}
+
+#form input {
+    width: 100%;
+}
+
+#form textarea {
+    width: 100%;
+}
+
+.trapezoid .form-button {
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: absolute;
+    top: -35px;
+    left: 22%;
+    color: red;
+    text-decoration: none;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+#name:focus, #email:focus, #message:focus {
+    border-color: red;
+}
+
+.form-content p {
+    font-size: 0.875rem;
 }
 
 /* Footer OK */
